/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.action.admin.cluster.node.info.proto;

option java_outer_classname = "NodesInfoProto";

message StringList {
  repeated string str_list = 1;
}

message Metrics {
  bool all = 1;
  StringList metric_list = 2;
}

message NodesInfoRequestProto {
  Metrics metrics = 1;
  string timeout = 2;
  repeated string nodeIds = 3;
}

message NodesInfoResponseProto {
  string clusterName = 1;
  repeated NodesInfo nodesInfo = 2;
}

message NodesInfo {
  string node_id = 1;
  string node_name = 2;
  string transport_address = 3;
  string host = 4;
  string ip = 5;
  string version = 6;
  string build_type = 7;
  string build_hash = 8;
  repeated string roles = 9;
  map<string, string> attributes = 10;
  optional string total_indexing_buffer = 11;

  // TODO: Writing these more complex objects to strings in JSON
  optional string settings = 12;
  optional string os = 13;
  optional string process = 14;
  optional string jvm = 15;
  optional string thread_pool = 16;
  optional string transport = 17;
  optional string http = 18;
  optional string grpc = 19;
  optional string plugins = 20;
  optional string ingest = 21;
  optional string aggs = 22;
  optional string search_pipelines = 24;
}
